--- a/ch_introduction.tex
+++ b/ch_introduction.tex
@@ -129,7 +129,7 @@ For more than 50 years, vector control campaigns have been underway in Argentina
 \label{fig:granchaco}
 \end{figure}
 
-The ecoregion's low socio-demographic conditions further support the parasite's lifecycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among rural and poor areas.
+The ecoregion's low socio-demographic conditions further support the parasite's life-cycle, where domestic interactions between humans, triatomines and animals foster the appearance of new infection cases, particularly among rural and poor areas.
 % The ecoregion as of today is hyperendemic for the disease.
 This region is considered as the endemic zone $E_Z$ in the analysis described in \cref{ch:descr-risk} and \cref{ch:machineLearning}.
 
@@ -197,7 +197,7 @@ In accordance with this movement, \cite{guzman2001epidemiology} showed
 that infected children under 5 year of age are frequently distributed in urban
 rather than in rural areas, indicating that the disease is becoming urbanized in
 Mexico.
-Therefore, as in the Argentinian case, the study of long-term mobility is crucial to understand the spread of the Chagas disease in Mexico.
+Therefore, as in the Argentinian case, the study of long-term mobility is crucial to understand the spread of Chagas disease in Mexico.
 
 
 
